# handoff

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.local/: project.yml
code/: __main__.py
docs/: 01_run_local.md  02_exchange_rates.md  02_venv_and_install.md  03_control_flow.md  03_set_up_aws_account.md  04_run_remote_config.md  04_set_up_aws_account.md  05_docker.md  05_run_remote_config.md  06_docker.md  06_fargate.md  07_fargate.md  07_schedule.md  08_cleanup.md  08_schedule.md  09_cleanup.md  advanced.md  advanced_topics.md  cleanup.rst  commands.rst  conf.py  docker.md  docker.rst  envvar_outputs.md  essential_commands.rst  exchange_rates.rst  faq.md  fargate.md  fargate.rst  grafana.md  guided_tour.rst  index.rst  outputs.md  project_file.md  quick_example.md  quick_reference.md  quick_start.md  remote_config.md  requirements.txt  role.rst  (+6 more)
examples/usgs/: README.md  project.yml
handoff/: __init__.py  __main__.py  config.py  main.py
handoff/aws_utils/: athena.py  s3.py  ssm.py
handoff/core/: admin.py  operators.py  project_schema.json  pyvenvx.py  runner.py  task.py  utils.py
handoff/docker/: Dockerfile  __init__.py  impl.py
handoff/impl/: __init__.py  admin.py  impl.py  runner.py  utils.py
handoff/plugins/: __init__.py
handoff/provider/: __init__.py
handoff/services/: __init__.py
handoff/test_projects/: auto_run  auto_run_all  begin  start
handoff/ui/: __init__.py  requirements.txt
handoff/utils/: __init__.py  pyvenvx.py
project/: project.yml
scripts/python/: collector_stats.py  list_installs.py
test_projects/01_word_count/: project.yml
test_projects/02_collect_stats/: project.yml
test_projects/03_exchange_rates/: project.yml
tests/: install_test.sh
(+165 files in other folders)
