[project]
name = "handoff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs==25.3.0",
    "boto3==1.40.22",
    "botocore==1.40.22",
    "docker==7.1.0",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "lxml==6.0.1",
    "packaging==25.0",
    "psutil==7.0.0",
    "pygit2==1.13.0",
    "pygithub==1.59.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "s3transfer==0.13.1",
]
