[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "handoff"
version = "0.4.2"
description = "Deploy configurable unix pipeline jobs serverlessly."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {"name" = "Daigo Tanaka"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "attrs==25.3.0",
    "boto3==1.40.22",
    "botocore==1.40.22",
    "docker==7.1.0",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "lxml==6.0.1",
    "packaging==25.0",
    "psutil==7.0.0",
    "pygit2==1.13.0",
    "pygithub==1.59.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "s3transfer==0.13.1",
]

[project.urls]
Homepage = "https://handoff.cloud"
Documentation = "https://dev.handoff.cloud"

[project.scripts]
handoff = "handoff:main.main"

[tool.setuptools]
packages = ["handoff"]
include-package-data = true

[dependency-groups]
dev = [
    "build>=1.3.0",
]
